--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 language: python
 python:
+- '2.7'
 - '3.3'
 - '3.5'
 - '3.6'
-install:
-- apt install libnfc-dev libfreefare-dev
-- pip install -r requirements.txt
+- pypy
+- pypy3
+before_install:
+- sudo apt-get -qq update
+- sudo apt install -y libnfc-dev libfreefare-dev
 script: make test
 deploy:
   provider: pypi
