--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,3 @@
-sudo: required
-services:
-  - docker
 language: python
 python:
 - '2.7'
@@ -10,9 +7,9 @@ python:
 - pypy
 - pypy3
 before_install:
-- docker pull ubuntu:xenial
-script:
-- docker run -v /home:/home ubuntu:xenial /bin/bash -c "cd /home; apt-get -qq update; apt install -y libnfc-dev libfreefare-dev; make test"
+- sudo apt-get -qq update
+- sudo apt install -y libnfc-dev libfreefare-dev
+script: make test
 deploy:
   provider: pypi
   user: BarnabyShearer
