--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
 - pypy3
 before_install:
 - sudo apt-get -qq update
-- sudo apt install -y libnfc-dev autoconf automake git libtool libssl-dev pkg-config gccxml
+- sudo apt install -y libnfc-dev autoconf automake git libtool libssl-dev pkg-config gccxml python-ctypeslib
 - git clone https://github.com/nfc-tools/libfreefare.git
 - cd libfreefare
 - git checkout libfreefare-0.4.0
