--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+dist: xenial
 language: python
 python:
 - '2.7'
@@ -6,15 +7,7 @@ python:
 - '3.6'
 before_install:
 - sudo apt-get -qq update
-- sudo apt install -y libnfc-dev autoconf automake git libtool libssl-dev pkg-config gccxml python-ctypeslib
-- git clone https://github.com/nfc-tools/libfreefare.git
-- cd libfreefare
-- git checkout libfreefare-0.4.0
-- autoreconf -vis
-- ./configure --prefix=/usr
-- make
-- sudo make install
-- cd ..
+- sudo apt install -y libssl-dev libnfc-dev libfreefare-dev libclang-5.0-dev
 script: make test
 deploy:
   provider: pypi
