--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,22 @@
-[aliases]
-test=pytest
+[metadata]
+name = pynfc
+description = `ctypeslib` converted libnfc and libfreefare.
+long_description = file: README.rst
+keywords = hacktoberfest
+author = Barnaby Shearer
+author_email = b@zi.is
+repository = "https://github.com/BarnabyShearer/pynfc"
+classifiers =
+    Development Status :: 5 - Production/Stable
+    License :: OSI Approved :: BSD License
+    Programming Language :: Python :: 3
 
-[tool:pytest]
-addopts = --doctest-modules
+[options]
+packages = find:
+install_requires = 
+python_requires = >=3.7
+include_package_data = True
 
-[bdist_wheel]
-universal = 1
+[options.package_data]
+* = py.typed
+
