--- a/setup.cfg
+++ b/setup.cfg
@@ -2,19 +2,20 @@
 name = pynfc
 description = `ctypeslib` converted libnfc and libfreefare.
 long_description = file: README.rst
-keywords = hacktoberfest
+keywords = Desfire Mifare NFC RFID hacktoberfest
 author = Barnaby Shearer
 author_email = b@zi.is
 repository = "https://github.com/BarnabyShearer/pynfc"
 classifiers =
     Development Status :: 5 - Production/Stable
     License :: OSI Approved :: BSD License
+    Programming Language :: Python :: 2
     Programming Language :: Python :: 3
 
 [options]
 packages = find:
 install_requires = 
-python_requires = >=3.7
+python_requires = >=2.7
 include_package_data = True
 
 [options.package_data]
