--- a/setup.cfg
+++ b/setup.cfg
@@ -16,8 +16,7 @@ classifiers =
 packages = find:
 install_requires = 
 python_requires = >=2.7
-include_package_data = True
 
 [options.package_data]
-* = py.typed
+* = py.typed, *.c, *.h
 
