--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,6 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - run: sudo apt install -y libfreefare-dev
+    - run: sudo apt install -y libclang-dev libfreefare-dev
     - run: pip install tox tox-gh-actions
     - run: tox
