--- a/setup.cfg
+++ b/setup.cfg
@@ -15,8 +15,11 @@ classifiers =
 [options]
 packages = find:
 install_requires = 
+    typing; python_version < "3"
 python_requires = >=2.7
 
 [options.package_data]
 * = py.typed, *.c, *.h
 
+[bdist_wheel]
+universal=1
