--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -3,7 +3,7 @@ formats: all
 build:
   os: ubuntu-20.04
   tools:
-    python: 3
+    python: "3.10"
   apt_packages:
   - libclang-dev
   - libfreefare-dev
