--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = pynfc
 description = `ctypeslib` converted libnfc and libfreefare.
 long_description = file: README.rst
-keywords = Desfire Mifare NFC RFID hacktoberfest
+keywords = Desfire Mifare NFC RFID
 author = Barnaby Shearer
 author_email = b@zi.is
 repository = "https://github.com/BarnabyShearer/pynfc"
