--- a/setup.cfg
+++ b/setup.cfg
@@ -5,12 +5,15 @@ long_description = file: README.rst
 keywords = Desfire Mifare NFC RFID
 author = Barnaby Shearer
 author_email = b@zi.is
-repository = "https://github.com/BarnabyShearer/pynfc"
 classifiers =
     Development Status :: 5 - Production/Stable
     License :: OSI Approved :: BSD License
     Programming Language :: Python :: 2
     Programming Language :: Python :: 3
+project_urls =
+    Source = "https://github.com/BarnabyShearer/pynfc"
+    Tracker = "https://github.com/BarnabyShearer/pynfc/issues"
+    Documentation = "http://pynfc.readthedocs.io/en/latest/"
 
 [options]
 packages = find:
