--- a/setup.cfg
+++ b/setup.cfg
@@ -11,9 +11,9 @@ classifiers =
     Programming Language :: Python :: 2
     Programming Language :: Python :: 3
 project_urls =
-    Source = "https://github.com/BarnabyShearer/pynfc"
-    Tracker = "https://github.com/BarnabyShearer/pynfc/issues"
-    Documentation = "http://pynfc.readthedocs.io/en/latest/"
+    Source = https://github.com/BarnabyShearer/pynfc
+    Tracker = https://github.com/BarnabyShearer/pynfc/issues
+    Documentation = https://pynfc.readthedocs.io/en/latest/
 
 [options]
 packages = find:
