Move build into setuptools

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 name = pynfc
 description = `ctypeslib` converted libnfc and libfreefare.
 long_description = file: README.rst
+long_description_content_type = text/x-rst
 keywords = Desfire Mifare NFC RFID
 author = Barnaby Shearer
 author_email = b@zi.is
